testsuite/tests/showIface/should_fail/all.T
test('THAddDocExternal',
     normal,
     multimod_compile_fail,
     ['THAddDocExternal', '-no-hs-main -c -v0'])
